made custom decoration for frame